<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/newsImage"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/newsImageDescription"
                android:layout_alignParentTop="true"
                android:alpha="0.5"
                android:gravity="center"
                android:background="@color/backgroundLightColor"
                android:padding="8dp"
                android:text="@string/image_sub"
                android:textSize="@dimen/small_text"
                android:textColor="@color/primaryTextColor"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/newsTitle"
                android:textStyle="bold"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/xlarge_text"
                android:text="@string/title"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:gravity="center_vertical|right">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/newsPublisher"
                    android:textSize="@dimen/normal_text"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/publisher"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:textSize="@dimen/small_text"
                    android:textColor="@color/secondaryTextColor"
                    android:text="@string/divider"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/newsTime"
                    android:textSize="@dimen/small_text"
                    android:textColor="@color/secondaryTextColor"
                    android:text="@string/time"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/newsSubTitle"
                android:lineSpacingExtra="4dp"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/large_text"
                android:text="@string/title_sub"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/newsText"
                android:lineSpacingExtra="4dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/secondaryTextColor"
                android:textSize="@dimen/large_text"
                android:text="@string/text"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>